# software_construction_8_project

./: .gitignore  CMakeLists.txt  README.md
header/: abstract_pizza.hpp  main.hpp  pizza.hpp
header/decorator_pattern/: bell_peppers.hpp  mushrooms.hpp  no_topping.hpp  olives.hpp  topping.hpp  tuna.hpp
header/factory_pattern/cheese_factory/: cheese.hpp  mixed_cheese.hpp  mozzarella_cheese.hpp  no_cheese.hpp
header/factory_pattern/crust_factory/: crust.hpp  thick_crust.hpp  thin_crust.hpp
header/factory_pattern/sauce_factory/: chunky_red_sauce.hpp  italian_sauce.hpp  no_sauce.hpp  sauce.hpp
header/headers/: cost_visitor_headers.hpp  main_headers.hpp  pizza_headers.hpp  topping_headers.hpp
header/unit_tests/: cheese_factory_unit_test.hpp  crust_factory_unit_test.hpp  decorator_pattern_unit_test.hpp  pizza_unit_test.hpp  sauce_factory_unit_test.hpp  visitor_pattern_test.hpp
header/visitor_pattern/: cost_visitor.hpp  visitable.hpp  visitor.hpp
src/: main.cpp  unit_test.cpp
